src/main/metadata-excluded/objects/Requirement_UserStory__c.object
<CustomObject>
    <description>PMO: Requirements Management. Input requirement details and track Requirement status</description>
    <fields>
        <fullName>Acceptance_Criteria_Change_Reason__c</fullName>
        <label>Acceptance Criteria Change Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acceptance_Criteria_Changes__c</fullName>
        <label>Acceptance Criteria Changes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Acceptance_Criteria_Security__c</fullName>
        <inlineHelpText>Acceptance Criteria for Security Requirement (if applicable)</inlineHelpText>
        <label>Acceptance Criteria (Security)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Acceptance_Criteria__c</fullName>
        <label>Acceptance Criteria</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_Item__c</fullName>
        <label>Action Item</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alpha_Beta_Review_No__c</fullName>
        <label>Alpha-Beta Review No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alpha_Review_Target__c</fullName>
        <description>Target date for Alpha Review demonstration for this User Story</description>
        <inlineHelpText>Target date for Alpha Review demonstration for this User Story</inlineHelpText>
        <label>Alpha Review Target</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assign_To_SBA_BA__c</fullName>
        <label>Assign To SBA / BA</label>
        <picklist>
            <picklistValues>
                <fullName>Zibin Wang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tulipe Lee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allen Zhang</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assign_To_TA_Developer__c</fullName>
        <label>Assign To TA / Developer</label>
        <picklist>
            <picklistValues>
                <fullName>Allen Zhang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lu Bin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mouse Liu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sam Wang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tony Liu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tulipe Lee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ying Jun</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Assign_to_TA_TC_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assign to TA/TC (user)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requirements4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Tester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Test leader assigned to manage this Requirement / User Story
Should be notified in Chatter if changes are made to the Acceptance Criteria</description>
        <inlineHelpText>Test leader assigned to manage this Requirement / User Story
Should be notified in Chatter if changes are made to the Acceptance Criteria</inlineHelpText>
        <label>Assigned Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requirement_User_Story</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assumptions__c</fullName>
        <label>Assumptions</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BA_Hours__c</fullName>
        <label>BA Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Beta_Review_Target__c</fullName>
        <description>Target date for Beta Review demonstration for this User Story</description>
        <inlineHelpText>Target date for Beta Review demonstration for this User Story</inlineHelpText>
        <label>Beta Review Target</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Build_Remarks__c</fullName>
        <label>Build Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Function user who raises or is responsible to validate this requirement</inlineHelpText>
        <label>Business Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Configuration</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security (Profile/Roles/Layouts)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visualforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Console</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Change_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Reqs</label>
        <referenceTo>Change_Request__c</referenceTo>
        <relationshipLabel>Requirement / User Story</relationshipLabel>
        <relationshipName>Requirement_User_Story</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Critical__c</fullName>
        <label>Biz Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deployment_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requirements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deployment_Remarks__c</fullName>
        <label>Deployment Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dev_Completed__c</fullName>
        <label>Dev Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Develop_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Develop Task</label>
        <referenceTo>Develop_Task__c</referenceTo>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Developer_Hours__c</fullName>
        <label>Developer Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_confirmation_besides_User__c</fullName>
        <label>Expected confirmation besides User</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Funcational_Owner_Remarks__c</fullName>
        <description>For functional owners</description>
        <label>Function Owner Remark</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>High_Level_Solution__c</fullName>
        <label>High Level Solution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IT_Test_Lead_Remark__c</fullName>
        <description>For TCS team</description>
        <label>IT Test Lead Remark</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Iteration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Iteration</label>
        <referenceTo>Iteration__c</referenceTo>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Country__c</fullName>
        <label>Market / Country</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Module_Object__c</fullName>
        <label>Module / Object</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aftersales Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company/Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact / Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Locator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Literature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Literature Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBAuP Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QC</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>New_User_Story_Reason__c</fullName>
        <label>New User Story Reason</label>
        <picklist>
            <controllingField>New_User_Story__c</controllingField>
            <picklistValues>
                <fullName>User Story Gap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BU Change Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_User_Story__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New User Story</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre User Story</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Requirement_UserStory__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>User Story</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Requirement_UserStory__c</referenceTo>
        <relationshipLabel>Subsequent User Story</relationshipLabel>
        <relationshipName>Pre_User_Story</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profiles__c</fullName>
        <description>The profiles that are related to the user story and solution.  If the customizations or configurations require specific profile settings to satisfy the requirements.</description>
        <inlineHelpText>The profiles that are related to the user story and solution.  If the customizations or configurations require specific profile settings to satisfy the requirements.</inlineHelpText>
        <label>Related Profiles</label>
        <picklist>
            <picklistValues>
                <fullName>CAC Data Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC Fulfullment Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC IB Operation Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC IB QC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC IB Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC IB Tranier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC IB User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC IT Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC OB Operation Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC OB QC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC OB Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC OB Tranier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC OB User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC ReadOnly User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC Report User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC SSI QC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC SSI Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC SSI Tranier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC SSI User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBCL  Marketing Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBCL After-Sales Marketing Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBCL After-Sales Marketing Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBCL After-Sales Marketing Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBCL CRM Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBCL Public Relations User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBCL S&amp;M Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBCL SSI User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBCL Sales Management User</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Proposed_Approach__c</fullName>
        <description>Detailed solution with enough details to build the configuration / custom solution</description>
        <inlineHelpText>Detailed solution with enough details to build the configuration / custom solution</inlineHelpText>
        <label>Proposed Approach</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ref_BQ__c</fullName>
        <label>Ref BQ#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_Process_Step__c</fullName>
        <label>Ref Process Step#</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ref_Process_UC__c</fullName>
        <label>Ref Process#/UC#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_Sheet_with_mockup__c</fullName>
        <label>Ref Sheet  with mockup</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ref_sheet_with_Screenflow__c</fullName>
        <label>Ref sheet with Screenflow</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Requirement - for duplicates or joint requirements or parent/child</description>
        <inlineHelpText>Related Requirement - for duplicates or joint requirements or parent/child</inlineHelpText>
        <label>Related Requirement</label>
        <referenceTo>Requirement_UserStory__c</referenceTo>
        <relationshipName>Related_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release / Phase</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remark_Question__c</fullName>
        <label>Remark / Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remark_Question_by_BA__c</fullName>
        <label>Remark/Question by BA</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Req_Unique_Id__c</fullName>
        <description>hidden field, copy of Requirement Id and make sure it&apos;s unique</description>
        <externalId>true</externalId>
        <label>*Req Unique Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Requirement_Adjustment__c</fullName>
        <label>Requirement Adjustment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requirement_Description__c</fullName>
        <description>Description of business requirement</description>
        <inlineHelpText>Description of business requirement</inlineHelpText>
        <label>Requirement Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requirements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBA_BA_Man_Days__c</fullName>
        <label>SBA/BA Man-Days</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBA_Hours__c</fullName>
        <label>SBA Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Screenshot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Screenshot?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solution_Architecture__c</fullName>
        <label>Solution Architecture</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Solution_Review__c</fullName>
        <description>Stream Lead - responsible for setting to &quot;Ready for Review&quot;</description>
        <inlineHelpText>Stream Lead - responsible for setting to &quot;Ready for Review&quot;</inlineHelpText>
        <label>Solution Review</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issues Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solution_Reviewed_old__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Detailed solution has been reviewed by TA/SA</description>
        <inlineHelpText>Detailed solution has been reviewed by TA/SA</inlineHelpText>
        <label>Solution Reviewed (old)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solution_Type__c</fullName>
        <label>Solution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Apex Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connect for Excel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EP- Extension Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VF Page</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Source_of_Requirement__c</fullName>
        <label>Source of Requirement</label>
        <picklist>
            <picklistValues>
                <fullName>Original / BPR</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>The stage of requirement. Each status will send emails to related team automatically.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Initialized</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Clarify with Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gap Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Understand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed (Verified)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold (for next release)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed (Duplicate)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training / Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed (Out Of Scope)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete Data Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending on Environment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA_Developer_Man_Days__c</fullName>
        <label>TA/Developer Man-Days</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TA_Hours__c</fullName>
        <label>TA Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Script_Ready__c</fullName>
        <label>Test Script Ready</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tested_Date__c</fullName>
        <label>Tested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_Story_Detail__c</fullName>
        <description>Description of User Story</description>
        <label>User Story Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Story_Reviewed__c</fullName>
        <inlineHelpText>Stream Lead - responsible for setting to &quot;Ready for Review&quot; for user story</inlineHelpText>
        <label>User Story Reviewed</label>
        <picklist>
            <picklistValues>
                <fullName>Ready for Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Story_Reviewed_old__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Reviewed by SA/TA</inlineHelpText>
        <label>User Story Reviewed (old)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requirements5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Validated_Date__c</fullName>
        <label>Validated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>assign_to_BA_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To BA/SBA (user)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requirements3</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Requirement / User Story</label>
    <listViews>
        <fullName>ALL_AU_CD</fullName>
        <columns>NAME</columns>
        <columns>Module_Object__c</columns>
        <columns>Category__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>assign_to_BA_user__c</columns>
        <columns>Critical__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Market_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>US_AU-CD</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Requirement_UserStory__c.User_Story</value>
        </filters>
        <label>ALL_AU_CD</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ALL_AU_DealerDataOpenIssues</fullName>
        <columns>NAME</columns>
        <columns>Module_Object__c</columns>
        <columns>Category__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>assign_to_BA_user__c</columns>
        <columns>Critical__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Market_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ref_Process_UC__c</field>
            <operation>equals</operation>
            <value>DD&amp;OI</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Requirement_UserStory__c.User_Story</value>
        </filters>
        <label>ALL_AU_DealerData&amp;OpenIssues</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ALL_AU_Lead</fullName>
        <columns>NAME</columns>
        <columns>Module_Object__c</columns>
        <columns>Category__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>assign_to_BA_user__c</columns>
        <columns>Critical__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Market_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>US_AU-LEAD</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Requirement_UserStory__c.User_Story</value>
        </filters>
        <label>ALL_AU_Lead</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllComplaintUS</fullName>
        <columns>NAME</columns>
        <columns>Module_Object__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>assign_to_BA_user__c</columns>
        <columns>Subject__c</columns>
        <columns>User_Story_Detail__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>US-CC-</value>
        </filters>
        <label>All Complaint US</label>
        <language>en_US</language>
    </listViews>
</CustomObject>